course4/week3-ungraded-labs/Implementing Canary Releases of TensorFlow Model Deployments with Kubernetes and Istio/tf-serving/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata: # kpt-merge: /image-classifier-gateway
  name: image-classifier-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
