course4/week3-ungraded-labs/Implementing Canary Releases of TensorFlow Model Deployments with Kubernetes and Istio/tf-serving/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata: # kpt-merge: /image-classifier
  name: image-classifier
spec:
  host: image-classifier
  subsets:
  - name: resnet101
    labels:
      version: resnet101
  - name: resnet50
    labels:
      version: resnet50
