course4/week3-ungraded-labs/Implementing Canary Releases of TensorFlow Model Deployments with Kubernetes and Istio/tf-serving/virtualservice-focused-routing.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata: # kpt-merge: /image-classifier
  name: image-classifier
spec:
  hosts:
  - "*"
  gateways:
  - image-classifier-gateway
  http:
  - match:
    - headers:
        user-group:
          exact: canary
    route:
    - destination:
        host: image-classifier
        subset: resnet101
        port:
          number: 8501
  - route:
    - destination:
        host: image-classifier
        subset: resnet50
        port:
          number: 8501
